Fixed reference to renamed .less file. Fixed wrong font paths in launcher.less. Changed cursor to pointer in the Special Chars dialog. (#4533)

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/util/htmlarea/charmap-dialog.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/util/htmlarea/charmap-dialog.less
@@ -10,4 +10,8 @@
     text-align: center;
     line-height: 80px;
   }
+
+  .mce-charmap td {
+    cursor: pointer;
+  }
 }
